--- a/src/pages/Pages.css
+++ b/src/pages/Pages.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .links,
 .nav {
   display: flex;
@@ -13,10 +19,36 @@
   margin-left: 5px;
 }
 
-.links {
-  margin-right: 20px;
+.links a {
+  text-decoration: none;
 }
 
 .nav {
-  background-color: lightblue;
+  padding: 0 20px;
+  min-height: 10vh;
+  background-color: #0c4a6e;
+}
+
+h2,
+p,
+h1 {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+p {
+  font-size: 1.4rem;
+  margin: 20px;
+}
+
+.home p {
+  text-align: justify;
+  margin-top: 15px;
+}
+
+.home {
+  margin: 10px;
+}
+
+.home h2 {
+  margin: 20px;
 }
